Nuovo smart contract + deploy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<p>{{balance}}</p>
-<p>pippi</p>
+<div>
+    <button type="button" title="Register seller" (click)="registerSeller()">Registra venditore</button>
+</div>
