header + lista ordini

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div>
     <button type="button" title="Register seller" (click)="registerSeller()">Registra venditore</button>
 </div>
+<app-header></app-header>
+<app-buyer></app-buyer>
