switch network & change account

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<header>
+<header class="header">
     <h1>Welcome to ShopChain!</h1>
-    <div>
+    <div class="navigation">
         <ul>
             <li>
                 <span>Smart Contract: </span>
