--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div>
-    <button type="button" title="Register seller" (click)="registerSeller()">Registra venditore</button>
+<app-switch-network *ngIf="!rightChain"></app-switch-network>
+<div *ngIf="rightChain">
+    <app-header></app-header>
+    <app-buyer></app-buyer>
 </div>
-<app-header></app-header>
-<app-buyer></app-buyer>
