Integrazione autenticazione e routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-switch-network *ngIf="!rightChain"></app-switch-network>
-<div *ngIf="rightChain">
-    <app-header></app-header>
-    <app-buyer></app-buyer>
-</div>
+<router-outlet></router-outlet>
