--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -8,6 +8,7 @@
                 <th>SellerAddress:</th>
                 <th>Amount:</th>
                 <th>State:</th>
+                <th>Operation:</th>
             </tr>
         </thead>
         <tbody>
@@ -17,6 +18,7 @@
                 <td>{{order.sellerAddress}}</td>
                 <td>{{order.amount}}</td>
                 <td>{{order.state}}</td>
+                <td><button *ngIf="order.state === 'Created' || order.state === 'Shipped' || order.state === 'Confirmed'" (click)="askRefund(order.id)">Ask refund</button></td>
             </tr>
         </tbody>
     </table>
