--- a/src/app/access/access.component.html
+++ b/src/app/access/access.component.html
@@ -1,4 +1,5 @@
 <h2>Benvenuto in ShopChain!</h2>
 <h3>Per accedere ai nostri servizi esegui l'accesso al wallet tramite MetaMask</h3>
 
-<button type="button" (click)="connectWallet()">Connect Wallet</button>
+<button type="button" (click)="connectWalletHome()">Connect Wallet Home</button>
+<button type="button" (click)="connectWalletLanding()">Connect Wallet Landing Page</button>
