--- a/src/app/switch-network/switch-network.component.html
+++ b/src/app/switch-network/switch-network.component.html
@@ -1,5 +1,10 @@
-<h2>
-    Sei collegato alla blockchain sbagliata!!
-</h2>
+<div class="switch">
+    <h1>
+        Sei collegato alla blockchain sbagliata!!
+    </h1>
+    <h2>
+        Per favore collegati alla testnet Avalanche Fuji.
+    </h2>
 
-<button type="button" (click)="changeNetwork()">Switch network</button>
+    <button mat-raised-button color="primary" type="button" (click)="changeNetwork()">Switch network</button>
+</div>
