--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,9 @@
 .header {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
     background-color: #b3bcc9;
     width: 100%;
 }
@@ -10,9 +13,10 @@
 }
 
 .navigation {
-    margin-left: 38em;
+    margin-left: 5em;
 }
 
 .navigation li {
     padding: 0.5em;
+    list-style-type: none;
 }
