--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,22 +1,15 @@
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: #b3bcc9;
-    width: 100%;
+.spacer {
+    flex: 1 1 auto;
 }
-
-.header h1 {
-    padding: 0.5em;
+.title {
+    padding-top: 60px;
 }
-
-.navigation {
-    margin-left: 5em;
+a {
+    color: white;
 }
-
-.navigation li {
-    padding: 0.5em;
-    list-style-type: none;
+a:visited {
+    color: #e612d4;
+}
+.link a {
+    padding-inline: 3%;
 }
