--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,15 @@
-<header class="header">
-    <h1>Welcome to ShopChain!</h1>
-    <div class="navigation">
-        <ul>
-            <li>
-                <span>Smart Contract: </span>
-                <span><a href="https://testnet.snowtrace.io/address/{{smartContractAdress}}" target="_blank" rel="noopener noreferrer">{{smartContractAdress}}</a></span>
-            </li>
-            <li>
-                <span>Your Address: </span>
-                <span><a href="https://testnet.snowtrace.io/address/{{currentAddress}}" target="_blank" rel="noopener noreferrer">{{currentAddress}}</a></span>
-            </li>
-        </ul>
-    </div>
-</header>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <span class="title">Benvenuto in ShopChain!</span>
+
+        <span class="spacer"></span>
+        <span>Indirizzo Smart Contract: </span>
+        <span class="link"><a href="https://testnet.snowtrace.io/address/{{smartContractAdress}}" target="_blank" rel="noopener noreferrer"> {{smartContractAdressShort}}</a></span> 
+    </mat-toolbar-row>
+    
+    <mat-toolbar-row>
+        <span class="spacer"></span>
+        <span>Il Tuo Indirizzo: </span>
+        <span class="link"><a href="https://testnet.snowtrace.io/address/{{currentAddress}}" target="_blank" rel="noopener noreferrer"> {{currentAddressShort}}</a></span>
+    </mat-toolbar-row>  
+</mat-toolbar>
