--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,8 +1,8 @@
-.orderForm {
+.card {
+  max-width: 450px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 8%;
   align-items: center;
 }
 
@@ -12,6 +12,10 @@
   justify-content: center;
   margin-top: 8%;
   align-items: center;
+}
+
+.info button {
+  margin-top: 3%;
 }
 
 .txConfirmed {
