--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="filters">
     <form [formGroup]="filters" (ngSubmit)="filterOrders()">
         <mat-form-field appearance="fill">
             <mat-label>State: </mat-label>
@@ -21,7 +21,7 @@
 </div>
 
 <div class="orders">
-    <h2>Orders:</h2>
+    <h1>I tuoi ordini:</h1>
     <table class="mat-elevation-z8 ordersTable">
         <thead>
             <tr>
@@ -34,27 +34,11 @@
         </thead>
         <tbody>
             <tr *ngFor="let order of ordersToDisplay">
-                <td>{{order.id}}</td>
-                <td>{{order.sellerAddress}}</td>
-                <td>{{order.amount}}</td>
-                <td>{{order.state}}</td>
-                <td>
-                    <div *ngIf="order.state === 'Created' || order.state === 'Shipped' || order.state === 'Confirmed'; then thenBlock else elseBlock"></div>
-                    <ng-template #thenBlock>
-                        <button mat-raised-button color="primary" type="button" (click)="askRefund(order.id)">Ask refund</button>
-                    </ng-template>
-                        
-                    <ng-template #elseBlock>No operations available</ng-template>                    
-
-
-                    <!-- <div>
-                        <button (click)="askRefund(order.id)">Ask refund</button>
-                        <button (click)="confirmOrder(order.id)">confirmOrderd</button>
-                        <button (click)="deleteOrder(order.id)">deleteOrder</button>
-                        <button (click)="shipOrder(order.id)">shipOrder</button>
-                        <button (click)="refundBuyer(order.id, order.amount)">refundBuyer</button>
-                    </div> -->
-                </td>
+                <td> {{order.id}} </td>
+                <td> {{order.sellerAddress}} </td>
+                <td> {{order.amount}} </td>
+                <td ngClass="{{order.state}} state"> {{order.state}} </td>
+                <td> <a routerLink="/info/{{order.id}}">Vedi Dettagli</a> </td>
             </tr>
         </tbody>
     </table>
