fix caricamento + refactoring

--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -25,11 +25,11 @@
     <table class="mat-elevation-z8 ordersTable">
         <thead>
             <tr>
-                <th>ID:</th>
-                <th>Indirizzo Venditore:</th>
-                <th>Prezzo:</th>
-                <th>Stato:</th>
-                <th>Operazioni:</th>
+                <th>ID</th>
+                <th>Indirizzo Venditore</th>
+                <th>Prezzo</th>
+                <th>Stato</th>
+                <th>Dettagli</th>
             </tr>
         </thead>
         <tbody>
