fix landing page

--- a/src/app/components/access/access.component.html
+++ b/src/app/components/access/access.component.html
@@ -4,7 +4,6 @@
         <h3>Per accedere ai nostri servizi esegui l'accesso al wallet tramite MetaMask</h3>
     </div>
     <div class="buttons">
-        <button mat-raised-button color="primary" type="button" (click)="connectWalletHome()">Connect Wallet Home</button>
-        <button mat-raised-button color="primary" type="button" (click)="connectWalletLanding()">Connect Wallet Landing Page</button>
+        <button mat-raised-button color="primary" type="button" (click)="connectWallet()">Connect Wallet</button>
     </div>
 </div>
