--- a/src/app/components/access/access.component.html
+++ b/src/app/components/access/access.component.html
@@ -1,9 +1,8 @@
 <div class="access">
     <div class="title">
-        <h2>Benvenuto in ShopChain!</h2>
-        <h3>Per accedere ai nostri servizi esegui l'accesso al wallet tramite MetaMask</h3>
-    </div>
-    <div class="buttons">
-        <button mat-raised-button color="primary" type="button" (click)="connectWallet()">Connect Wallet</button>
+        <h1>Benvenuto in ShopChain!</h1>
+        <h2>Per accedere ai nostri servizi esegui l'accesso al wallet tramite MetaMask</h2>
+
+        <button mat-raised-button color="primary" type="button" (click)="connectWallet()">Connetti Wallet</button>
     </div>
 </div>
