--- a/src/app/components/switch-network/switch-network.component.css
+++ b/src/app/components/switch-network/switch-network.component.css
@@ -3,13 +3,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10%;
+    margin-top: 8%;
 }
 
 .switch h1 {
     font-weight: bold;
+    font-size: 2em;
+}
+
+.switch h2 {
+    font-size: 1.5em;
 }
 
 .switch button {
-    margin-top: 5%;
+    margin-top: 2%;
 }
