--- a/src/app/components/access/access.component.css
+++ b/src/app/components/access/access.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 10%;
+    margin-top: 8%;
     align-items: center;
 }
 
@@ -13,19 +13,14 @@
     align-items: center;
 }
 
-.title h2 {
+.title h1 {
     font-size: 2em;
 }
 
-.title h3 {
+.title h2 {
     font-size: 1.5em;
 }
-.buttons {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
-.buttons button{
-    margin-top: 5%;
+button{
+    margin-top: 2%;
 }
