--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -14,10 +14,6 @@
   align-items: center;
 }
 
-.info button {
-  margin-top: 3%;
-}
-
 .txConfirmed {
   display: flex;
   flex-direction: column;
@@ -31,4 +27,9 @@
   justify-content: center;
   margin-top: 8%;
   align-items: center;
+}
+
+.logoAvax {
+  width: 20%;
+  margin-bottom: -5px;
 }
