--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -54,7 +54,7 @@
 
                 <div *ngIf="txConfirmed" class="txConfirmed">
                     <p>Transazione confermata.</p>
-                    <p><button mat-raised-button color="primary" type="button" (click)="toHome()">Clicca qui</button>
+                    <p><a mat-raised-button color="primary" type="button" href="/home">Clicca qui</a>
                         per visualizzare i tuoi ordini.</p>
                 </div>
             </div>
