--- a/src/app/components/order-info/order-info.component.css
+++ b/src/app/components/order-info/order-info.component.css
@@ -32,7 +32,7 @@ tr:nth-child(even) {
     color: #29ab27;
 }
 .Deleted {
-    color: #eb4034;
+    color: #CF1507;
 }
 .Shipped {
     color: #a69728;
