--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,12 @@
 <mat-toolbar color="primary" class="header">
     <mat-toolbar-row>
-        <span class="title">Benvenuto in ShopChain!</span>
-
         <span class="spacer"></span>
         <span>Indirizzo Smart Contract: </span>
         <span class="link"><a href="https://testnet.snowtrace.io/address/{{smartContractAdress}}" target="_blank" rel="noopener noreferrer"> {{smartContractAdressShort}}</a></span> 
     </mat-toolbar-row>
     
     <mat-toolbar-row>
+        <span>Benvenuto in ShopChain!</span>
         <span class="spacer"></span>
         <span>Il Tuo Indirizzo: </span>
         <span class="link"><a href="https://testnet.snowtrace.io/address/{{currentAddress}}" target="_blank" rel="noopener noreferrer"> {{currentAddressShort}}</a></span>
