--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,10 @@
 <mat-toolbar color="primary" class="header">
+
     <mat-toolbar-row>
         <span class="title">Benvenuto in ShopChain!</span>
+    </mat-toolbar-row>
 
+    <mat-toolbar-row>
         <span class="spacer"></span>
         <span>Indirizzo Smart Contract: </span>
         <span class="link"><a href="https://testnet.snowtrace.io/address/{{smartContractAdress}}" target="_blank" rel="noopener noreferrer"> {{smartContractAdressShort}}</a></span> 
