--- a/src/app/components/access/access.component.html
+++ b/src/app/components/access/access.component.html
@@ -3,6 +3,6 @@
         <h1>Benvenuto in ShopChain!</h1>
         <h2>Per accedere ai nostri servizi esegui l'accesso al wallet tramite MetaMask</h2>
 
-        <button mat-raised-button color="primary" type="button" (click)="connectWallet()">Connetti Wallet</button>
+        <button aria-label="Connetti wallet" mat-raised-button color="primary" type="button" (click)="connectWallet()">Connetti Wallet</button>
     </div>
 </div>
