--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,11 +13,11 @@
     <mat-toolbar-row>
         <span>Benvenuto in ShopChain!</span>
         <span class="spacer"></span>
-        <span>Il Tuo Indirizzo: </span>
+        <span>Il tuo Indirizzo: </span>
         <span class="link"><a href="https://testnet.snowtrace.io/address/{{currentAddress}}" target="_blank" rel="noopener noreferrer"> {{currentAddressShort}}</a></span>
     </mat-toolbar-row>
     <mat-toolbar-row>
         <span class="spacer"></span>
-        <span>Il Tuo Balance: {{balance}} AVAX <img src="../../../assets/avaxLogo.png" alt="Logo Avax" class="logoAvax"></span>
+        <span>Il tuo Balance: {{balance}} AVAX <img src="../../../assets/avaxLogo.png" alt="Logo Avax" class="logoAvax"></span>
     </mat-toolbar-row>
 </mat-toolbar>
