--- a/src/app/components/order-info/order-info.component.html
+++ b/src/app/components/order-info/order-info.component.html
@@ -36,7 +36,7 @@
                             </ng-template>
 
                             <ng-template #elseBlock3>
-                                <button mat-raised-button color="primary" type="button" (click)="askRefund(order.id)">Chiedi Reso</button>
+                                <button aria-label="Chiedi il rimborso" mat-raised-button color="primary" type="button" (click)="askRefund(order.id)">Chiedi Reso</button>
                             </ng-template>
                         </ng-template>
                         
