--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -4,28 +4,27 @@
             <mat-form-field appearance="fill">
                 <mat-label>Stato: </mat-label>
                 <mat-select formControlName="state">
-                    <mat-option *ngFor="let state of stateList" [value]="state">{{state}}</mat-option>
+                    <mat-option aria-label="Stato dell'ordine" *ngFor="let state of stateList" [value]="state">{{state}}</mat-option>
                 </mat-select>
             </mat-form-field>
         
             <mat-form-field appearance="fill">
                 <mat-label>Indirizzo Venditore: </mat-label>
-                <input type="text" name="sellerAddress" id="sellerAddress" matInput
+                <input aria-label="Indirizzo del wallet del venditore" type="text" name="sellerAddress" id="sellerAddress" matInput
                     placeholder="Es. 0xEbDC67e05348AB26BF1a5662B3C7129BE08a601f" formControlName="sellerAddress">
-                <mat-error *ngIf="sellerAddress.touched && sellerAddress.errors?.['isAddress']">Indirizzo non valido
-                </mat-error>
+                <mat-error *ngIf="sellerAddress.touched && sellerAddress.errors?.['isAddress']">Indirizzo non valido</mat-error>
             </mat-form-field>
         </div>
 
         <div class="form-buttons">
-            <button mat-raised-button color="primary" type="submit">Applica Filtri</button>
-            <button mat-raised-button type="button" class="reset" (click)="resetFilters()">Reset Filtri</button>
+            <button aria-label="Applica i filtri" mat-raised-button color="primary" type="submit">Applica Filtri</button>
+            <button aria-label="Resetta i filtri" mat-raised-button class="reset" type="button" (click)="resetFilters()">Reset Filtri</button>
         </div>
     </form>
 </div>
 
 <div class="orders">
-    <h1>I tuoi ordini:</h1>
+    <h1>I tuoi ordini</h1>
     <table class="mat-elevation-z8 ordersTable">
         <thead>
             <tr>
@@ -42,10 +41,10 @@
                 <td> {{order.sellerAddress}} </td>
                 <td> {{order.amount}} </td>
                 <td ngClass="{{order.state}} state"> {{order.state}} </td>
-                <td> <a mat-raised-button color="primary" type="button" href="/info/{{order.id}}">Vedi Dettagli</a> </td>
+                <td> <a aria-label="Vedi i dettagli dell'ordine" mat-raised-button color="primary" type="button" href="/info/{{order.id}}">Vedi Dettagli</a> </td>
             </tr>
         </tbody>
     </table>
 </div>
-<!-- 
-<app-table [orders]="orders"></app-table> -->
+
+<!-- <app-table [orders]="orders"></app-table> -->
