--- a/src/app/components/switch-network/switch-network.component.html
+++ b/src/app/components/switch-network/switch-network.component.html
@@ -6,5 +6,5 @@
         Per favore collegati alla testnet Avalanche Fuji.
     </h2>
 
-    <button mat-raised-button color="primary" type="button" (click)="changeNetwork()">Switch network</button>
+    <button aria-label="Connettiti alla blockchain corretta" mat-raised-button color="primary" type="button" (click)="changeNetwork()">Switch network</button>
 </div>
